--- a/Gestion inteligente academica/Properties/Resources.resx
+++ b/Gestion inteligente academica/Properties/Resources.resx
@@ -118,17 +118,17 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="chulo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\chulo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Panel Estudiante" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Panel Estudiante.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Adelante" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Adelante.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Atras" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Atras.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="0b3605e3-d80c-4e0d-87e1-788ce33e8571" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\0b3605e3-d80c-4e0d-87e1-788ce33e8571.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Panel Estudiante" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Panel Estudiante.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="panel_Docente" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\panel_Docente.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -136,7 +136,22 @@
   <data name="Recomendaciones" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Recomendaciones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="riesgo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\riesgo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="UCundimanarca" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\UCundimanarca.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="signo_admiracion" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\signo_admiracion.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="0b3605e3-d80c-4e0d-87e1-788ce33e8571" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\0b3605e3-d80c-4e0d-87e1-788ce33e8571.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="riesgo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\riesgo1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Riesgo_bajo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Riesgo_bajo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
